--- a/templates/urlgenerated.html
+++ b/templates/urlgenerated.html
@@ -3,7 +3,7 @@
 {% block content %}
 <center>
     <div class="alert alert-primary" role="alert">
-        <h1>Your Short URL: "domain.com/{{ chars }}"</h1>
+        <h1>Your Short URL: "localhost:8000/{{ chars }}"</h1>
     </div>
 </center>
 {% endblock content %}
